// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CD Pipeline Page List render card view 1`] = `
<div>
  <div
    class="Layout---horizontal--3rmQ StyledProps---main--1Wws container standard StyledProps---flex--2Jz8 StyledProps---padding-left-large--28UT StyledProps---padding-right-large--2vF9"
  >
    <div
      class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws"
    >
      <div
        class="breadcrumbs"
      >
        <div>
          <a
            class="breadcrumb"
            href="/account/testAcc/cd/orgs/testOrg/projects/test/dashboard"
          >
            test
          </a>
          <span
            class="separator"
          >
            /
          </span>
        </div>
        <div>
          <span
            class="lastBreadcrumb"
          >
            Pipelines
          </span>
        </div>
      </div>
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-grey700--WvM3"
      >
        Pipelines
      </p>
    </div>
  </div>
  <div
    class="Layout---horizontal--3rmQ StyledProps---main--1Wws header StyledProps---flex--2Jz8 StyledProps---flex-distribution-space-between--1TyN"
  >
    <div
      class="Layout---horizontal--3rmQ StyledProps---main--1Wws"
    >
      <button
        class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
        data-testid="add-pipeline"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          + Pipeline
        </span>
      </button>
    </div>
    <div
      class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws"
      style="align-items: center;"
    >
      <div
        class="expandSearch"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput---main--5Kcg "
          data-name=""
        >
          <span
            class="bp3-icon bp3-icon-search StyledProps---main--1Wws ExpandingSearchInput---icon--vX6_"
            icon="search"
          >
            <svg
              data-icon="search"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <desc>
                search
              </desc>
              <path
                d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <input
            class="bp3-input "
            dir="auto"
            placeholder="Search"
            type="search"
            value=""
          />
        </div>
      </div>
      <span
        class="bp3-icon StyledProps---main--1Wws"
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <mask
            fill="#fff"
            id="ng-filter_svg__a"
          >
            <path
              clip-rule="evenodd"
              d="M16.5 5a.5.5 0 00-1 0v1H5a.5.5 0 000 1h10.5v1a.5.5 0 001 0V7H19a.5.5 0 000-1h-2.5V5zm-12 7a.5.5 0 01.5-.5h3v-1a.5.5 0 011 0v1h10a.5.5 0 010 1H9v1a.5.5 0 01-1 0v-1H5a.5.5 0 01-.5-.5zm0 5.5A.5.5 0 015 17h7v-1a.5.5 0 011 0v1h6a.5.5 0 010 1h-6v1a.5.5 0 01-1 0v-1H5a.5.5 0 01-.5-.5z"
              fill-rule="evenodd"
            />
          </mask>
          <path
            d="M15.5 6v1a1 1 0 001-1h-1zm0 1h1a1 1 0 00-1-1v1zm1 0V6a1 1 0 00-1 1h1zm0-1h-1a1 1 0 001 1V6zM8 11.5v1a1 1 0 001-1H8zm1 0H8a1 1 0 001 1v-1zm0 1v-1a1 1 0 00-1 1h1zm-1 0h1a1 1 0 00-1-1v1zm4 4.5v1a1 1 0 001-1h-1zm1 0h-1a1 1 0 001 1v-1zm0 1v-1a1 1 0 00-1 1h1zm-1 0h1a1 1 0 00-1-1v1zm4-12.5a.5.5 0 01-.5-.5h2A1.5 1.5 0 0016 3.5v2zm.5-.5a.5.5 0 01-.5.5v-2A1.5 1.5 0 0014.5 5h2zm0 1V5h-2v1h2zM5 7h10.5V5H5v2zm.5-.5A.5.5 0 015 7V5a1.5 1.5 0 00-1.5 1.5h2zM5 6a.5.5 0 01.5.5h-2A1.5 1.5 0 005 8V6zm10.5 0H5v2h10.5V6zm1 2V7h-2v1h2zm-.5-.5a.5.5 0 01.5.5h-2A1.5 1.5 0 0016 9.5v-2zm-.5.5a.5.5 0 01.5-.5v2A1.5 1.5 0 0017.5 8h-2zm0-1v1h2V7h-2zM19 6h-2.5v2H19V6zm-.5.5A.5.5 0 0119 6v2a1.5 1.5 0 001.5-1.5h-2zm.5.5a.5.5 0 01-.5-.5h2A1.5 1.5 0 0019 5v2zm-2.5 0H19V5h-2.5v2zm-1-2v1h2V5h-2zM5 10.5A1.5 1.5 0 003.5 12h2a.5.5 0 01-.5.5v-2zm3 0H5v2h3v-2zm-1 0v1h2v-1H7zM8.5 9A1.5 1.5 0 007 10.5h2a.5.5 0 01-.5.5V9zm1.5 1.5A1.5 1.5 0 008.5 9v2a.5.5 0 01-.5-.5h2zm0 1v-1H8v1h2zm9-1H9v2h10v-2zm1.5 1.5a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zM19 13.5a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-10 0h10v-2H9v2zm1 0v-1H8v1h2zM8.5 15a1.5 1.5 0 001.5-1.5H8a.5.5 0 01.5-.5v2zM7 13.5A1.5 1.5 0 008.5 15v-2a.5.5 0 01.5.5H7zm0-1v1h2v-1H7zm-2 1h3v-2H5v2zM3.5 12A1.5 1.5 0 005 13.5v-2a.5.5 0 01.5.5h-2zM5 16a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5v-2zm7 0H5v2h7v-2zm1 1v-1h-2v1h2zm0-1a.5.5 0 01-.5.5v-2A1.5 1.5 0 0011 16h2zm-.5.5a.5.5 0 01-.5-.5h2a1.5 1.5 0 00-1.5-1.5v2zM12 16v1h2v-1h-2zm7 0h-6v2h6v-2zm1.5 1.5A1.5 1.5 0 0019 16v2a.5.5 0 01-.5-.5h2zM19 19a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-6 0h6v-2h-6v2zm-1-1v1h2v-1h-2zm0 1a.5.5 0 01.5-.5v2A1.5 1.5 0 0014 19h-2zm.5-.5a.5.5 0 01.5.5h-2a1.5 1.5 0 001.5 1.5v-2zm.5.5v-1h-2v1h2zm-8 0h7v-2H5v2zm-1.5-1.5A1.5 1.5 0 005 19v-2a.5.5 0 01.5.5h-2z"
            fill="#383946"
            mask="url(#ng-filter_svg__a)"
          />
        </svg>
      </span>
      <div
        class="Layout---horizontal--3rmQ StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---padding-medium--3Ish"
      >
        <button
          class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-grid-view StyledProps---main--1Wws"
            icon="grid-view"
          >
            <svg
              data-icon="grid-view"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                grid-view
              </desc>
              <path
                d="M0 1v6h7V0H1C.45 0 0 .45 0 1zm0 14c0 .55.45 1 1 1h6V9H0v6zM15 0H9v7h7V1c0-.55-.45-1-1-1zM9 16h6c.55 0 1-.45 1-1V9H9v7z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
        <button
          class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-list StyledProps---main--1Wws"
            icon="list"
          >
            <svg
              data-icon="list"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                list
              </desc>
              <path
                d="M1 3h14c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm14 10H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="StyledProps---font--2ipy StyledProps---main--1Wws pageBody pageBody"
  >
    <div
      class="gridView"
    >
      <div
        class="gridLayout"
      >
        <div
          class="StyledProps---font--2ipy StyledProps---main--1Wws uikit-masonry-layout--container0 StyledProps---padding-xxxlarge--2I9v"
          style="margin: 0px auto; width: 0px; height: 0px; position: relative;"
        >
          <div
            class="StyledProps---font--2ipy StyledProps---main--1Wws uikit-masonry-layout--item-0"
            style="margin-bottom: 30px; position: absolute; left: 0px; top: 0px;"
          >
            <div
              class="bp3-card bp3-elevation-0 Card---card--2BXa pipelineCard"
            >
              <div
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---padding-left-xlarge--3m2O StyledProps---padding-right-xlarge--xu-3 StyledProps---padding-bottom-large--1zGv"
              >
                <div
                  class="Card---cardMenu--JLDc menu"
                >
                  <div
                    class="Card---dots--3qQP"
                  >
                    <span
                      class="bp3-popover-wrapper bp3-dark"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws Card---menu--3447"
                          type="button"
                        >
                          <span
                            class="bp3-icon bp3-icon-more StyledProps---main--1Wws"
                            icon="more"
                          >
                            <svg
                              data-icon="more"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                more
                              </desc>
                              <path
                                d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
                <span
                  class="tags"
                >
                  <span
                    class="Tag---main--1vng"
                  >
                    <span
                      class="bp3-tag bp3-intent-primary bp3-minimal"
                    >
                      <span
                        class="bp3-text-overflow-ellipsis bp3-fill"
                      >
                        <span>
                          Ready To Run
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws clickable StyledProps---font-medium--2b-0 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                  data-testid="pipeline1"
                >
                  pipeline1
                </p>
                <p
                  class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StyledProps---font-small--1qQz StyledProps---padding-top-medium--29t2"
                  style="--text-line-clamp: 2;"
                >
                  pipeline1 description
                </p>
              </div>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws StyledProps---padding-small--3f0A"
              >
                <span
                  class="Tag---main--1vng"
                >
                  <span
                    class="bp3-tag cardTags"
                  >
                    <span
                      class="bp3-text-overflow-ellipsis bp3-fill"
                    >
                      asdd:asd
                    </span>
                  </span>
                </span>
                <span
                  class="Tag---main--1vng"
                >
                  <span
                    class="bp3-tag cardTags"
                  >
                    <span
                      class="bp3-text-overflow-ellipsis bp3-fill"
                    >
                      test
                    </span>
                  </span>
                </span>
              </div>
              <div
                class="StyledProps---font--2ipy StyledProps---main--1Wws clickable StyledProps---padding-medium--3Ish StyledProps---border--uz_- StyledProps---border-top--3_3E"
              >
                <div
                  class="Layout---horizontal--3rmQ StyledProps---main--1Wws StyledProps---flex--2Jz8 StyledProps---flex-distribution-space-between--1TyN"
                  style="align-items: flex-end;"
                >
                  <div
                    class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws StyledProps---flex--2Jz8 StyledProps---flex-align-center-center--2AmX"
                  >
                    <p
                      class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-black--2kJn StyledProps---font-small--1qQz"
                      style="text-transform: capitalize; display: flex; align-items: center;"
                    >
                      <span
                        class="bp3-icon StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04"
                      >
                        <svg
                          height="12"
                          id="step-group_svg__Layer_1"
                          viewBox="0 0 21 20"
                          width="12"
                          x="0"
                          xml:space="preserve"
                          y="0"
                        >
                          <style>
                            .step-group_svg__st0{fill:#fff!important}
                          </style>
                          <path
                            class="step-group_svg__st0"
                            d="M1 .8h13v13.3H1z"
                          />
                          <path
                            d="M14 1H1v13h13V1zm1-1v15H0V0h15z"
                          />
                          <path
                            class="step-group_svg__st0"
                            d="M7 6h13v13H7z"
                          />
                          <path
                            class="step-group_svg__st1"
                            d="M20 6H7v13h13V6zm1-1v15H6V5h15z"
                          />
                        </svg>
                      </span>
                      2
                       
                      <span>
                        Stages
                      </span>
                    </p>
                    <p
                      class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey600--ksWT StyledProps---font-size-small--3cA6"
                      style="text-transform: uppercase;"
                    >
                      <span>
                        Stages
                      </span>
                    </p>
                  </div>
                  <div
                    class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws StyledProps---flex--2Jz8 StyledProps---flex-align-center-center--2AmX"
                  >
                    <span
                      class="activityChart"
                    >
                      <div
                        class="StyledProps---font--2ipy StyledProps---main--1Wws SparkChart---main--27eo"
                        role="spark-chart"
                      >
                        <div
                          class="container vertical rounded"
                        >
                          <div
                            class="progress-bar"
                            role="spark"
                          >
                            <div
                              class="progress-track"
                            >
                              <div
                                class="progress-fill"
                                style="height: 33.33333333333333%;"
                              />
                            </div>
                          </div>
                          <div
                            class="progress-bar"
                            role="spark"
                          >
                            <div
                              class="progress-track"
                            >
                              <div
                                class="progress-fill"
                                style="height: 33.33333333333333%;"
                              />
                            </div>
                          </div>
                          <div
                            class="progress-bar"
                            role="spark"
                          >
                            <div
                              class="progress-track"
                            >
                              <div
                                class="progress-fill"
                                style="height: 0%;"
                              />
                            </div>
                          </div>
                          <div
                            class="progress-bar"
                            role="spark"
                          >
                            <div
                              class="progress-track"
                            >
                              <div
                                class="progress-fill"
                                style="height: 33.33333333333333%;"
                              />
                            </div>
                          </div>
                          <div
                            class="progress-bar"
                            role="spark"
                          >
                            <div
                              class="progress-track"
                            >
                              <div
                                class="progress-fill"
                                style="height: 100%;"
                              />
                            </div>
                          </div>
                          <div
                            class="progress-bar"
                            role="spark"
                          >
                            <div
                              class="progress-track"
                            >
                              <div
                                class="progress-fill"
                                style="height: 100%;"
                              />
                            </div>
                          </div>
                          <div
                            class="progress-bar"
                            role="spark"
                          >
                            <div
                              class="progress-track"
                            >
                              <div
                                class="progress-fill"
                                style="height: 66.66666666666666%;"
                              />
                            </div>
                          </div>
                          <div
                            class="progress-bar"
                            role="spark"
                          >
                            <div
                              class="progress-track"
                            >
                              <div
                                class="progress-fill"
                                style="height: 100%;"
                              />
                            </div>
                          </div>
                          <div
                            class="progress-bar"
                            role="spark"
                          >
                            <div
                              class="progress-track"
                            >
                              <div
                                class="progress-fill"
                                style="height: 66.66666666666666%;"
                              />
                            </div>
                          </div>
                          <div
                            class="progress-bar"
                            role="spark"
                          >
                            <div
                              class="progress-track"
                            >
                              <div
                                class="progress-fill"
                                style="height: 66.66666666666666%;"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </span>
                    <p
                      class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey600--ksWT StyledProps---font-size-small--3cA6"
                      style="text-transform: uppercase;"
                    >
                      <span>
                        Activity
                      </span>
                    </p>
                  </div>
                  <div
                    class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws StyledProps---flex--2Jz8 StyledProps---flex-align-center-center--2AmX"
                  >
                    <p
                      class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-red600--3y6r"
                    >
                      -
                    </p>
                    <p
                      class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey600--ksWT StyledProps---font-size-small--3cA6"
                      style="text-transform: uppercase;"
                    >
                      <span>
                        Errors
                      </span>
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps---font--2ipy StyledProps---main--1Wws runPipeline StyledProps---padding-medium--3Ish StyledProps---border--uz_- StyledProps---border-top--3_3E"
              >
                <div>
                  <button
                    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
                    data-testid="card-run-pipeline"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <defs>
                          <path
                            d="M7.2 10.6V5.4L10.6 8l-3.4 2.6zm4.4-3.3L7.4 4.1c-.3-.2-.6-.2-.9-.1-.3.2-.5.5-.5.8v6.4c0 .3.2.6.5.8.3.1.6.1.9-.1l4.2-3.2c.2-.2.3-.4.3-.7s-.1-.5-.3-.7zm1.1 5.4c-2.2 2.2-5.7 2.6-8.4.8s-3.6-5.1-2.4-8c1.2-2.9 4.3-4.6 7.4-4 3.1.6 5.3 3.3 5.3 6.5.1 1.8-.6 3.4-1.9 4.7zm2.7-7.8C13.8 1.1 9.6-.9 5.7.4 1.7 1.6-.7 5.6.2 9.6s4.5 6.8 8.6 6.4c4.1-.4 7.2-3.8 7.2-8 0-1.1-.2-2.1-.6-3.1z"
                            id="run-pipeline_svg__a"
                          />
                        </defs>
                        <clippath
                          id="run-pipeline_svg__b"
                        >
                          <use
                            overflow="visible"
                            xlink:href="#run-pipeline_svg__a"
                          />
                        </clippath>
                        <path
                          clip-path="url(#run-pipeline_svg__b)"
                          d="M-5-5h26v26H-5z"
                          fill="#54b610"
                        />
                      </svg>
                    </span>
                    <span
                      class="bp3-button-text"
                    >
                      <span>
                        Run Pipeline
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledProps---font--2ipy StyledProps---main--1Wws uikit-masonry-layout--item-0"
            style="margin-bottom: 30px; position: absolute; left: 0px; top: 0px;"
          >
            <div
              class="bp3-card bp3-elevation-0 Card---card--2BXa pipelineCard"
            >
              <div
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---padding-left-xlarge--3m2O StyledProps---padding-right-xlarge--xu-3 StyledProps---padding-bottom-large--1zGv"
              >
                <div
                  class="Card---cardMenu--JLDc menu"
                >
                  <div
                    class="Card---dots--3qQP"
                  >
                    <span
                      class="bp3-popover-wrapper bp3-dark"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws Card---menu--3447"
                          type="button"
                        >
                          <span
                            class="bp3-icon bp3-icon-more StyledProps---main--1Wws"
                            icon="more"
                          >
                            <svg
                              data-icon="more"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                more
                              </desc>
                              <path
                                d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
                <span
                  class="tags"
                >
                  <span
                    class="Tag---main--1vng"
                  >
                    <span
                      class="bp3-tag bp3-intent-primary bp3-minimal"
                    >
                      <span
                        class="bp3-text-overflow-ellipsis bp3-fill"
                      >
                        <span>
                          Ready To Run
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws clickable StyledProps---font-medium--2b-0 StyledProps---color--8PuS StyledProps---color-black--2kJn"
                  data-testid="pipeline2"
                >
                  pipeline2
                </p>
                <p
                  class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StyledProps---font-small--1qQz StyledProps---padding-top-medium--29t2"
                  style="--text-line-clamp: 2;"
                >
                  pipeline2 description
                </p>
              </div>
              <div
                class="StyledProps---font--2ipy StyledProps---main--1Wws clickable StyledProps---padding-medium--3Ish StyledProps---border--uz_- StyledProps---border-top--3_3E"
              >
                <div
                  class="Layout---horizontal--3rmQ StyledProps---main--1Wws StyledProps---flex--2Jz8 StyledProps---flex-distribution-space-between--1TyN"
                  style="align-items: flex-end;"
                >
                  <div
                    class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws StyledProps---flex--2Jz8 StyledProps---flex-align-center-center--2AmX"
                  >
                    <p
                      class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-black--2kJn StyledProps---font-small--1qQz"
                      style="text-transform: capitalize; display: flex; align-items: center;"
                    >
                      <span
                        class="bp3-icon StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04"
                      >
                        <svg
                          height="12"
                          id="step-group_svg__Layer_1"
                          viewBox="0 0 21 20"
                          width="12"
                          x="0"
                          xml:space="preserve"
                          y="0"
                        >
                          <style>
                            .step-group_svg__st0{fill:#fff!important}
                          </style>
                          <path
                            class="step-group_svg__st0"
                            d="M1 .8h13v13.3H1z"
                          />
                          <path
                            d="M14 1H1v13h13V1zm1-1v15H0V0h15z"
                          />
                          <path
                            class="step-group_svg__st0"
                            d="M7 6h13v13H7z"
                          />
                          <path
                            class="step-group_svg__st1"
                            d="M20 6H7v13h13V6zm1-1v15H6V5h15z"
                          />
                        </svg>
                      </span>
                      2
                       
                      <span>
                        Stages
                      </span>
                    </p>
                    <p
                      class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey600--ksWT StyledProps---font-size-small--3cA6"
                      style="text-transform: uppercase;"
                    >
                      <span>
                        Stages
                      </span>
                    </p>
                  </div>
                  <div
                    class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws StyledProps---flex--2Jz8 StyledProps---flex-align-center-center--2AmX"
                  >
                    <span
                      class="activityChart"
                    >
                      <div
                        class="StyledProps---font--2ipy StyledProps---main--1Wws SparkChart---main--27eo"
                        role="spark-chart"
                      >
                        <div
                          class="container vertical rounded"
                        >
                          <div
                            class="progress-bar"
                            role="spark"
                          >
                            <div
                              class="progress-track"
                            >
                              <div
                                class="progress-fill"
                                style="height: 60%;"
                              />
                            </div>
                          </div>
                          <div
                            class="progress-bar"
                            role="spark"
                          >
                            <div
                              class="progress-track"
                            >
                              <div
                                class="progress-fill"
                                style="height: 80%;"
                              />
                            </div>
                          </div>
                          <div
                            class="progress-bar"
                            role="spark"
                          >
                            <div
                              class="progress-track"
                            >
                              <div
                                class="progress-fill"
                                style="height: 100%;"
                              />
                            </div>
                          </div>
                          <div
                            class="progress-bar"
                            role="spark"
                          >
                            <div
                              class="progress-track"
                            >
                              <div
                                class="progress-fill"
                                style="height: 80%;"
                              />
                            </div>
                          </div>
                          <div
                            class="progress-bar"
                            role="spark"
                          >
                            <div
                              class="progress-track"
                            >
                              <div
                                class="progress-fill"
                                style="height: 80%;"
                              />
                            </div>
                          </div>
                          <div
                            class="progress-bar"
                            role="spark"
                          >
                            <div
                              class="progress-track"
                            >
                              <div
                                class="progress-fill"
                                style="height: 20%;"
                              />
                            </div>
                          </div>
                          <div
                            class="progress-bar"
                            role="spark"
                          >
                            <div
                              class="progress-track"
                            >
                              <div
                                class="progress-fill"
                                style="height: 20%;"
                              />
                            </div>
                          </div>
                          <div
                            class="progress-bar"
                            role="spark"
                          >
                            <div
                              class="progress-track"
                            >
                              <div
                                class="progress-fill"
                                style="height: 40%;"
                              />
                            </div>
                          </div>
                          <div
                            class="progress-bar"
                            role="spark"
                          >
                            <div
                              class="progress-track"
                            >
                              <div
                                class="progress-fill"
                                style="height: 60%;"
                              />
                            </div>
                          </div>
                          <div
                            class="progress-bar"
                            role="spark"
                          >
                            <div
                              class="progress-track"
                            >
                              <div
                                class="progress-fill"
                                style="height: 40%;"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </span>
                    <p
                      class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey600--ksWT StyledProps---font-size-small--3cA6"
                      style="text-transform: uppercase;"
                    >
                      <span>
                        Activity
                      </span>
                    </p>
                  </div>
                  <div
                    class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws StyledProps---flex--2Jz8 StyledProps---flex-align-center-center--2AmX"
                  >
                    <p
                      class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-red600--3y6r"
                    >
                      2
                    </p>
                    <p
                      class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey600--ksWT StyledProps---font-size-small--3cA6"
                      style="text-transform: uppercase;"
                    >
                      <span>
                        Errors
                      </span>
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps---font--2ipy StyledProps---main--1Wws runPipeline StyledProps---padding-medium--3Ish StyledProps---border--uz_- StyledProps---border-top--3_3E"
              >
                <div>
                  <button
                    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
                    data-testid="card-run-pipeline"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <defs>
                          <path
                            d="M7.2 10.6V5.4L10.6 8l-3.4 2.6zm4.4-3.3L7.4 4.1c-.3-.2-.6-.2-.9-.1-.3.2-.5.5-.5.8v6.4c0 .3.2.6.5.8.3.1.6.1.9-.1l4.2-3.2c.2-.2.3-.4.3-.7s-.1-.5-.3-.7zm1.1 5.4c-2.2 2.2-5.7 2.6-8.4.8s-3.6-5.1-2.4-8c1.2-2.9 4.3-4.6 7.4-4 3.1.6 5.3 3.3 5.3 6.5.1 1.8-.6 3.4-1.9 4.7zm2.7-7.8C13.8 1.1 9.6-.9 5.7.4 1.7 1.6-.7 5.6.2 9.6s4.5 6.8 8.6 6.4c4.1-.4 7.2-3.8 7.2-8 0-1.1-.2-2.1-.6-3.1z"
                            id="run-pipeline_svg__a"
                          />
                        </defs>
                        <clippath
                          id="run-pipeline_svg__b"
                        >
                          <use
                            overflow="visible"
                            xlink:href="#run-pipeline_svg__a"
                          />
                        </clippath>
                        <path
                          clip-path="url(#run-pipeline_svg__b)"
                          d="M-5-5h26v26H-5z"
                          fill="#54b610"
                        />
                      </svg>
                    </span>
                    <span
                      class="bp3-button-text"
                    >
                      <span>
                        Run Pipeline
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pagination"
      >
        <div
          class="Layout---horizontal--3rmQ StyledProps---main--1Wws Pagination---container--3ype StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v StyledProps---flex--2Jz8 StyledProps---flex-align-center-center--2AmX StyledProps---flex-distribution-space-between--1TyN"
        >
          <span
            class="StyledProps---font--2ipy StyledProps---main--1Wws Pagination---text--30fh StyledProps---inline--1f52"
          >
            Showing 
            <strong>
              4
            </strong>
             of 
            <strong>
              4
            </strong>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CD Pipeline Page List render empty list card view 1`] = `
<div>
  <div
    class="Layout---horizontal--3rmQ StyledProps---main--1Wws container standard StyledProps---flex--2Jz8 StyledProps---padding-left-large--28UT StyledProps---padding-right-large--2vF9"
  >
    <div
      class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws"
    >
      <div
        class="breadcrumbs"
      >
        <div>
          <a
            class="breadcrumb"
            href="/account/testAcc/cd/orgs/testOrg/projects/test/dashboard"
          >
            test
          </a>
          <span
            class="separator"
          >
            /
          </span>
        </div>
        <div>
          <span
            class="lastBreadcrumb"
          >
            Pipelines
          </span>
        </div>
      </div>
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-grey700--WvM3"
      >
        Pipelines
      </p>
    </div>
  </div>
  <div
    class="Layout---horizontal--3rmQ StyledProps---main--1Wws header StyledProps---flex--2Jz8 StyledProps---flex-distribution-space-between--1TyN"
  >
    <div
      class="Layout---horizontal--3rmQ StyledProps---main--1Wws"
    >
      <button
        class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
        data-testid="add-pipeline"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          + Pipeline
        </span>
      </button>
    </div>
    <div
      class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws"
      style="align-items: center;"
    >
      <div
        class="expandSearch"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput---main--5Kcg "
          data-name=""
        >
          <span
            class="bp3-icon bp3-icon-search StyledProps---main--1Wws ExpandingSearchInput---icon--vX6_"
            icon="search"
          >
            <svg
              data-icon="search"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <desc>
                search
              </desc>
              <path
                d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <input
            class="bp3-input "
            dir="auto"
            placeholder="Search"
            type="search"
            value=""
          />
        </div>
      </div>
      <span
        class="bp3-icon StyledProps---main--1Wws"
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <mask
            fill="#fff"
            id="ng-filter_svg__a"
          >
            <path
              clip-rule="evenodd"
              d="M16.5 5a.5.5 0 00-1 0v1H5a.5.5 0 000 1h10.5v1a.5.5 0 001 0V7H19a.5.5 0 000-1h-2.5V5zm-12 7a.5.5 0 01.5-.5h3v-1a.5.5 0 011 0v1h10a.5.5 0 010 1H9v1a.5.5 0 01-1 0v-1H5a.5.5 0 01-.5-.5zm0 5.5A.5.5 0 015 17h7v-1a.5.5 0 011 0v1h6a.5.5 0 010 1h-6v1a.5.5 0 01-1 0v-1H5a.5.5 0 01-.5-.5z"
              fill-rule="evenodd"
            />
          </mask>
          <path
            d="M15.5 6v1a1 1 0 001-1h-1zm0 1h1a1 1 0 00-1-1v1zm1 0V6a1 1 0 00-1 1h1zm0-1h-1a1 1 0 001 1V6zM8 11.5v1a1 1 0 001-1H8zm1 0H8a1 1 0 001 1v-1zm0 1v-1a1 1 0 00-1 1h1zm-1 0h1a1 1 0 00-1-1v1zm4 4.5v1a1 1 0 001-1h-1zm1 0h-1a1 1 0 001 1v-1zm0 1v-1a1 1 0 00-1 1h1zm-1 0h1a1 1 0 00-1-1v1zm4-12.5a.5.5 0 01-.5-.5h2A1.5 1.5 0 0016 3.5v2zm.5-.5a.5.5 0 01-.5.5v-2A1.5 1.5 0 0014.5 5h2zm0 1V5h-2v1h2zM5 7h10.5V5H5v2zm.5-.5A.5.5 0 015 7V5a1.5 1.5 0 00-1.5 1.5h2zM5 6a.5.5 0 01.5.5h-2A1.5 1.5 0 005 8V6zm10.5 0H5v2h10.5V6zm1 2V7h-2v1h2zm-.5-.5a.5.5 0 01.5.5h-2A1.5 1.5 0 0016 9.5v-2zm-.5.5a.5.5 0 01.5-.5v2A1.5 1.5 0 0017.5 8h-2zm0-1v1h2V7h-2zM19 6h-2.5v2H19V6zm-.5.5A.5.5 0 0119 6v2a1.5 1.5 0 001.5-1.5h-2zm.5.5a.5.5 0 01-.5-.5h2A1.5 1.5 0 0019 5v2zm-2.5 0H19V5h-2.5v2zm-1-2v1h2V5h-2zM5 10.5A1.5 1.5 0 003.5 12h2a.5.5 0 01-.5.5v-2zm3 0H5v2h3v-2zm-1 0v1h2v-1H7zM8.5 9A1.5 1.5 0 007 10.5h2a.5.5 0 01-.5.5V9zm1.5 1.5A1.5 1.5 0 008.5 9v2a.5.5 0 01-.5-.5h2zm0 1v-1H8v1h2zm9-1H9v2h10v-2zm1.5 1.5a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zM19 13.5a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-10 0h10v-2H9v2zm1 0v-1H8v1h2zM8.5 15a1.5 1.5 0 001.5-1.5H8a.5.5 0 01.5-.5v2zM7 13.5A1.5 1.5 0 008.5 15v-2a.5.5 0 01.5.5H7zm0-1v1h2v-1H7zm-2 1h3v-2H5v2zM3.5 12A1.5 1.5 0 005 13.5v-2a.5.5 0 01.5.5h-2zM5 16a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5v-2zm7 0H5v2h7v-2zm1 1v-1h-2v1h2zm0-1a.5.5 0 01-.5.5v-2A1.5 1.5 0 0011 16h2zm-.5.5a.5.5 0 01-.5-.5h2a1.5 1.5 0 00-1.5-1.5v2zM12 16v1h2v-1h-2zm7 0h-6v2h6v-2zm1.5 1.5A1.5 1.5 0 0019 16v2a.5.5 0 01-.5-.5h2zM19 19a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-6 0h6v-2h-6v2zm-1-1v1h2v-1h-2zm0 1a.5.5 0 01.5-.5v2A1.5 1.5 0 0014 19h-2zm.5-.5a.5.5 0 01.5.5h-2a1.5 1.5 0 001.5 1.5v-2zm.5.5v-1h-2v1h2zm-8 0h7v-2H5v2zm-1.5-1.5A1.5 1.5 0 005 19v-2a.5.5 0 01.5.5h-2z"
            fill="#383946"
            mask="url(#ng-filter_svg__a)"
          />
        </svg>
      </span>
      <div
        class="Layout---horizontal--3rmQ StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---padding-medium--3Ish"
      >
        <button
          class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-grid-view StyledProps---main--1Wws"
            icon="grid-view"
          >
            <svg
              data-icon="grid-view"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                grid-view
              </desc>
              <path
                d="M0 1v6h7V0H1C.45 0 0 .45 0 1zm0 14c0 .55.45 1 1 1h6V9H0v6zM15 0H9v7h7V1c0-.55-.45-1-1-1zM9 16h6c.55 0 1-.45 1-1V9H9v7z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
        <button
          class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-list StyledProps---main--1Wws"
            icon="list"
          >
            <svg
              data-icon="list"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                list
              </desc>
              <path
                d="M1 3h14c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm14 10H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="StyledProps---font--2ipy StyledProps---main--1Wws pageBody pageBody"
  >
    <div
      class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---flex--2Jz8 StyledProps---flex-align-center-center--2AmX"
      style="width: 100%; height: 100%;"
    >
      <div
        class="Layout---vertical--3Szv Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws"
        style="align-items: center; margin-top: -48px; width: 470px;"
      >
        <span
          class="bp3-icon StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey400--3csv"
        >
          <svg
            height="48"
            width="48"
          >
            <g
              fill="#25A6F7"
            >
              <path
                d="M17.857 2.705h-3.672a2.85 2.85 0 00-5.614.714 2.85 2.85 0 005.614.714h3.672c.395 0 .714.32.714.715v6.428c0 .395-.32.714-.714.714h-6.786a.714.714 0 100 1.429h6.786c1.184 0 2.143-.96 2.143-2.143V4.848c0-1.184-.96-2.143-2.143-2.143zM11.43 4.848a1.429 1.429 0 110-2.858 1.429 1.429 0 010 2.858z"
              />
              <path
                d="M17.143 14.848c-1.28 0-2.352.848-2.715 2.01H7.143a.711.711 0 01-.709-.685 2.85 2.85 0 00-.72-5.611 2.844 2.844 0 00-2.46 1.428H2.143a.714.714 0 01-.714-.714V4.848c0-.395.32-.715.714-.715h4.643a.714.714 0 000-1.428H2.143C.959 2.705 0 3.665 0 4.848v6.428c0 1.184.96 2.143 2.143 2.143h.714a2.85 2.85 0 002.147 2.757 2.14 2.14 0 002.139 2.11h7.203a2.857 2.857 0 102.797-3.438zM4.286 13.419a1.429 1.429 0 112.858 0 1.429 1.429 0 01-2.858 0zm12.857 5.714a1.429 1.429 0 110-2.858 1.429 1.429 0 010 2.858z"
              />
            </g>
          </svg>
        </span>
        <h2
          class="StyledProps---font--2ipy StyledProps---font-h2--3Vpc StyledProps---main--1Wws StyledProps---font-align-center--22lb StyledProps---color--8PuS StyledProps---color-grey500--3lFR"
          level="2"
        >
          Pipelines define your release process using multiple Workflows and approvals in sequential and/or parallel stages.
        </h2>
        <button
          class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            + Pipeline
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`CD Pipeline Page List render list view 1`] = `
<div>
  <div
    class="Layout---horizontal--3rmQ StyledProps---main--1Wws container standard StyledProps---flex--2Jz8 StyledProps---padding-left-large--28UT StyledProps---padding-right-large--2vF9"
  >
    <div
      class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws"
    >
      <div
        class="breadcrumbs"
      >
        <div>
          <a
            class="breadcrumb"
            href="/account/testAcc/cd/orgs/testOrg/projects/test/dashboard"
          >
            test
          </a>
          <span
            class="separator"
          >
            /
          </span>
        </div>
        <div>
          <span
            class="lastBreadcrumb"
          >
            Pipelines
          </span>
        </div>
      </div>
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-grey700--WvM3"
      >
        Pipelines
      </p>
    </div>
  </div>
  <div
    class="Layout---horizontal--3rmQ StyledProps---main--1Wws header StyledProps---flex--2Jz8 StyledProps---flex-distribution-space-between--1TyN"
  >
    <div
      class="Layout---horizontal--3rmQ StyledProps---main--1Wws"
    >
      <button
        class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
        data-testid="add-pipeline"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          + Pipeline
        </span>
      </button>
    </div>
    <div
      class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws"
      style="align-items: center;"
    >
      <div
        class="expandSearch"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput---main--5Kcg "
          data-name=""
        >
          <span
            class="bp3-icon bp3-icon-search StyledProps---main--1Wws ExpandingSearchInput---icon--vX6_"
            icon="search"
          >
            <svg
              data-icon="search"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <desc>
                search
              </desc>
              <path
                d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <input
            class="bp3-input "
            dir="auto"
            placeholder="Search"
            type="search"
            value=""
          />
        </div>
      </div>
      <span
        class="bp3-icon StyledProps---main--1Wws"
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <mask
            fill="#fff"
            id="ng-filter_svg__a"
          >
            <path
              clip-rule="evenodd"
              d="M16.5 5a.5.5 0 00-1 0v1H5a.5.5 0 000 1h10.5v1a.5.5 0 001 0V7H19a.5.5 0 000-1h-2.5V5zm-12 7a.5.5 0 01.5-.5h3v-1a.5.5 0 011 0v1h10a.5.5 0 010 1H9v1a.5.5 0 01-1 0v-1H5a.5.5 0 01-.5-.5zm0 5.5A.5.5 0 015 17h7v-1a.5.5 0 011 0v1h6a.5.5 0 010 1h-6v1a.5.5 0 01-1 0v-1H5a.5.5 0 01-.5-.5z"
              fill-rule="evenodd"
            />
          </mask>
          <path
            d="M15.5 6v1a1 1 0 001-1h-1zm0 1h1a1 1 0 00-1-1v1zm1 0V6a1 1 0 00-1 1h1zm0-1h-1a1 1 0 001 1V6zM8 11.5v1a1 1 0 001-1H8zm1 0H8a1 1 0 001 1v-1zm0 1v-1a1 1 0 00-1 1h1zm-1 0h1a1 1 0 00-1-1v1zm4 4.5v1a1 1 0 001-1h-1zm1 0h-1a1 1 0 001 1v-1zm0 1v-1a1 1 0 00-1 1h1zm-1 0h1a1 1 0 00-1-1v1zm4-12.5a.5.5 0 01-.5-.5h2A1.5 1.5 0 0016 3.5v2zm.5-.5a.5.5 0 01-.5.5v-2A1.5 1.5 0 0014.5 5h2zm0 1V5h-2v1h2zM5 7h10.5V5H5v2zm.5-.5A.5.5 0 015 7V5a1.5 1.5 0 00-1.5 1.5h2zM5 6a.5.5 0 01.5.5h-2A1.5 1.5 0 005 8V6zm10.5 0H5v2h10.5V6zm1 2V7h-2v1h2zm-.5-.5a.5.5 0 01.5.5h-2A1.5 1.5 0 0016 9.5v-2zm-.5.5a.5.5 0 01.5-.5v2A1.5 1.5 0 0017.5 8h-2zm0-1v1h2V7h-2zM19 6h-2.5v2H19V6zm-.5.5A.5.5 0 0119 6v2a1.5 1.5 0 001.5-1.5h-2zm.5.5a.5.5 0 01-.5-.5h2A1.5 1.5 0 0019 5v2zm-2.5 0H19V5h-2.5v2zm-1-2v1h2V5h-2zM5 10.5A1.5 1.5 0 003.5 12h2a.5.5 0 01-.5.5v-2zm3 0H5v2h3v-2zm-1 0v1h2v-1H7zM8.5 9A1.5 1.5 0 007 10.5h2a.5.5 0 01-.5.5V9zm1.5 1.5A1.5 1.5 0 008.5 9v2a.5.5 0 01-.5-.5h2zm0 1v-1H8v1h2zm9-1H9v2h10v-2zm1.5 1.5a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zM19 13.5a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-10 0h10v-2H9v2zm1 0v-1H8v1h2zM8.5 15a1.5 1.5 0 001.5-1.5H8a.5.5 0 01.5-.5v2zM7 13.5A1.5 1.5 0 008.5 15v-2a.5.5 0 01.5.5H7zm0-1v1h2v-1H7zm-2 1h3v-2H5v2zM3.5 12A1.5 1.5 0 005 13.5v-2a.5.5 0 01.5.5h-2zM5 16a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5v-2zm7 0H5v2h7v-2zm1 1v-1h-2v1h2zm0-1a.5.5 0 01-.5.5v-2A1.5 1.5 0 0011 16h2zm-.5.5a.5.5 0 01-.5-.5h2a1.5 1.5 0 00-1.5-1.5v2zM12 16v1h2v-1h-2zm7 0h-6v2h6v-2zm1.5 1.5A1.5 1.5 0 0019 16v2a.5.5 0 01-.5-.5h2zM19 19a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-6 0h6v-2h-6v2zm-1-1v1h2v-1h-2zm0 1a.5.5 0 01.5-.5v2A1.5 1.5 0 0014 19h-2zm.5-.5a.5.5 0 01.5.5h-2a1.5 1.5 0 001.5 1.5v-2zm.5.5v-1h-2v1h2zm-8 0h7v-2H5v2zm-1.5-1.5A1.5 1.5 0 005 19v-2a.5.5 0 01.5.5h-2z"
            fill="#383946"
            mask="url(#ng-filter_svg__a)"
          />
        </svg>
      </span>
      <div
        class="Layout---horizontal--3rmQ StyledProps---main--1Wws StyledProps---inline--1f52 StyledProps---padding-medium--3Ish"
      >
        <button
          class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-grid-view StyledProps---main--1Wws"
            icon="grid-view"
          >
            <svg
              data-icon="grid-view"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                grid-view
              </desc>
              <path
                d="M0 1v6h7V0H1C.45 0 0 .45 0 1zm0 14c0 .55.45 1 1 1h6V9H0v6zM15 0H9v7h7V1c0-.55-.45-1-1-1zM9 16h6c.55 0 1-.45 1-1V9H9v7z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
        <button
          class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-list StyledProps---main--1Wws"
            icon="list"
          >
            <svg
              data-icon="list"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                list
              </desc>
              <path
                d="M1 3h14c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm14 10H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h14c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="StyledProps---font--2ipy StyledProps---main--1Wws pageBody pageBody"
  >
    <div
      class="table table"
    >
      <div
        class="header"
        role="row"
      >
        <div
          class="cell"
          colspan="1"
          role="columnheader"
          style="width: 20%;"
          title="Toggle SortBy"
        >
          PIPELINE
          <span
            class="bp3-icon bp3-icon-double-caret-vertical StyledProps---main--1Wws StyledProps---padding-left-small--ODrE"
            icon="double-caret-vertical"
          >
            <svg
              data-icon="double-caret-vertical"
              height="15"
              viewBox="0 0 16 16"
              width="15"
            >
              <desc>
                double-caret-vertical
              </desc>
              <path
                d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="cell"
          colspan="1"
          role="columnheader"
          style="width: 20%;"
        >
          DESCRIPTION
        </div>
        <div
          class="cell"
          colspan="1"
          role="columnheader"
          style="width: 10%;"
        >
          STAGES
        </div>
        <div
          class="cell"
          colspan="1"
          role="columnheader"
          style="width: 10%;"
        >
          ACTIVITY
        </div>
        <div
          class="cell"
          colspan="1"
          role="columnheader"
          style="width: 20%;"
        >
          LAST RUN
        </div>
        <div
          class="cell"
          colspan="1"
          role="columnheader"
          style="width: 10%;"
        >
          ERRORS
        </div>
        <div
          class="cell"
          colspan="1"
          role="columnheader"
          style="width: 10%;"
        >
          
        </div>
      </div>
      <div
        class="row card clickable"
        role="row"
      >
        <div
          class="cell"
          role="cell"
          style="width: 20%;"
        >
          <div
            class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws"
            data-testid="pipeline1"
          >
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-black--2kJn"
            >
              pipeline1
            </p>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <div
                  class="Layout---horizontal--3rmQ Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws StyledProps---flex--2Jz8 StyledProps---flex-align-center-center--2AmX"
                  tabindex="0"
                >
                  <span
                    class="bp3-icon StyledProps---main--1Wws"
                  >
                    <svg
                      height="15"
                      viewBox="0 0 14 14"
                      width="15"
                    >
                      <path
                        d="M7 0h-.2c-.2 0-.4.1-.6.3l-6 6c-.3.3-.3.8 0 1.1L2 9.1l4.6 4.6c.3.3.8.3 1.1 0l6-6c.2-.1.3-.3.3-.5v-.7-.3-1.3-2c0-.5-.4-1-1-1h-.9V1c0-.5-.4-1-1-1H7zm0 .6h4.2c.2 0 .4.2.4.4v.9h-1.1c-.3-.3-.5-.4-.8-.4s-.4.1-.6.3h-.5c-.2.1-.4.1-.6.3l-6 6s-.1.1-.1.2L.7 6.9c-.1-.1-.1-.2 0-.3l6-6s.1-.1.2-.1c0 .1.1.1.1.1zm1.9 1.8H13c.2 0 .4.2.4.4v4.3s0 .2-.1.2l-6 6c-.1.1-.2.1-.3 0L2.5 8.8c-.1-.1-.1-.2 0-.3l6-6s.1-.1.2-.1zm2.7.9c-.2 0-.5.1-.6.3-.4.4-.4.9 0 1.3s.9.4 1.3 0 .4-.9 0-1.3c-.3-.2-.5-.3-.7-.3zm0 .7c.1 0 .2 0 .2.1.1.1.1.3 0 .4s-.3.1-.4 0-.1-.3 0-.4c0-.1.1-.1.2-.1z"
                        fill="#4d5969"
                      />
                    </svg>
                  </span>
                  <p
                    class="StyledProps---font--2ipy StyledProps---main--1Wws"
                  />
                </div>
              </span>
            </span>
          </div>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey400--3csv"
          >
            pipeline1
          </p>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 20%;"
        >
          <p
            class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-black--2kJn"
            style="--text-line-clamp: 2;"
          >
            pipeline1 description
          </p>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 10%;"
        >
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-black--2kJn StyledProps---font-small--1qQz"
            style="text-transform: capitalize; display: flex; align-items: center;"
          >
            <span
              class="bp3-icon StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04"
            >
              <svg
                height="12"
                id="step-group_svg__Layer_1"
                viewBox="0 0 21 20"
                width="12"
                x="0"
                xml:space="preserve"
                y="0"
              >
                <style>
                  .step-group_svg__st0{fill:#fff!important}
                </style>
                <path
                  class="step-group_svg__st0"
                  d="M1 .8h13v13.3H1z"
                />
                <path
                  d="M14 1H1v13h13V1zm1-1v15H0V0h15z"
                />
                <path
                  class="step-group_svg__st0"
                  d="M7 6h13v13H7z"
                />
                <path
                  class="step-group_svg__st1"
                  d="M20 6H7v13h13V6zm1-1v15H6V5h15z"
                />
              </svg>
            </span>
            2
             
            <span>
              Stages
            </span>
          </p>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 10%;"
        >
          <span
            class="activityChart"
          >
            <div
              class="StyledProps---font--2ipy StyledProps---main--1Wws SparkChart---main--27eo"
              role="spark-chart"
            >
              <div
                class="container vertical rounded"
              >
                <div
                  class="progress-bar"
                  role="spark"
                >
                  <div
                    class="progress-track"
                  >
                    <div
                      class="progress-fill"
                      style="height: 33.33333333333333%;"
                    />
                  </div>
                </div>
                <div
                  class="progress-bar"
                  role="spark"
                >
                  <div
                    class="progress-track"
                  >
                    <div
                      class="progress-fill"
                      style="height: 33.33333333333333%;"
                    />
                  </div>
                </div>
                <div
                  class="progress-bar"
                  role="spark"
                >
                  <div
                    class="progress-track"
                  >
                    <div
                      class="progress-fill"
                      style="height: 0%;"
                    />
                  </div>
                </div>
                <div
                  class="progress-bar"
                  role="spark"
                >
                  <div
                    class="progress-track"
                  >
                    <div
                      class="progress-fill"
                      style="height: 33.33333333333333%;"
                    />
                  </div>
                </div>
                <div
                  class="progress-bar"
                  role="spark"
                >
                  <div
                    class="progress-track"
                  >
                    <div
                      class="progress-fill"
                      style="height: 100%;"
                    />
                  </div>
                </div>
                <div
                  class="progress-bar"
                  role="spark"
                >
                  <div
                    class="progress-track"
                  >
                    <div
                      class="progress-fill"
                      style="height: 100%;"
                    />
                  </div>
                </div>
                <div
                  class="progress-bar"
                  role="spark"
                >
                  <div
                    class="progress-track"
                  >
                    <div
                      class="progress-fill"
                      style="height: 66.66666666666666%;"
                    />
                  </div>
                </div>
                <div
                  class="progress-bar"
                  role="spark"
                >
                  <div
                    class="progress-track"
                  >
                    <div
                      class="progress-fill"
                      style="height: 100%;"
                    />
                  </div>
                </div>
                <div
                  class="progress-bar"
                  role="spark"
                >
                  <div
                    class="progress-track"
                  >
                    <div
                      class="progress-fill"
                      style="height: 66.66666666666666%;"
                    />
                  </div>
                </div>
                <div
                  class="progress-bar"
                  role="spark"
                >
                  <div
                    class="progress-track"
                  >
                    <div
                      class="progress-fill"
                      style="height: 66.66666666666666%;"
                    />
                  </div>
                </div>
              </div>
            </div>
          </span>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 20%;"
        >
          <div
            class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws"
            data-testid="pipeline1"
          >
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey400--3csv"
            >
              Last run:
            </p>
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey400--3csv"
            >
              Never
            </p>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 10%;"
        >
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-red600--3y6r"
          >
            -
          </p>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 10%;"
        >
          <div
            class="Layout---horizontal--3rmQ StyledProps---main--1Wws"
            style="justify-content: flex-end;"
          >
            <span
              class="bp3-popover-wrapper bp3-dark"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws actionButton"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-more StyledProps---main--1Wws"
                    icon="more"
                  >
                    <svg
                      data-icon="more"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        more
                      </desc>
                      <path
                        d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="row card clickable"
        role="row"
      >
        <div
          class="cell"
          role="cell"
          style="width: 20%;"
        >
          <div
            class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws"
            data-testid="pipeline2"
          >
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-black--2kJn"
            >
              pipeline2
            </p>
          </div>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey400--3csv"
          >
            pipeline2
          </p>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 20%;"
        >
          <p
            class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-black--2kJn"
            style="--text-line-clamp: 2;"
          >
            pipeline2 description
          </p>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 10%;"
        >
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-black--2kJn StyledProps---font-small--1qQz"
            style="text-transform: capitalize; display: flex; align-items: center;"
          >
            <span
              class="bp3-icon StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04"
            >
              <svg
                height="12"
                id="step-group_svg__Layer_1"
                viewBox="0 0 21 20"
                width="12"
                x="0"
                xml:space="preserve"
                y="0"
              >
                <style>
                  .step-group_svg__st0{fill:#fff!important}
                </style>
                <path
                  class="step-group_svg__st0"
                  d="M1 .8h13v13.3H1z"
                />
                <path
                  d="M14 1H1v13h13V1zm1-1v15H0V0h15z"
                />
                <path
                  class="step-group_svg__st0"
                  d="M7 6h13v13H7z"
                />
                <path
                  class="step-group_svg__st1"
                  d="M20 6H7v13h13V6zm1-1v15H6V5h15z"
                />
              </svg>
            </span>
            2
             
            <span>
              Stages
            </span>
          </p>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 10%;"
        >
          <span
            class="activityChart"
          >
            <div
              class="StyledProps---font--2ipy StyledProps---main--1Wws SparkChart---main--27eo"
              role="spark-chart"
            >
              <div
                class="container vertical rounded"
              >
                <div
                  class="progress-bar"
                  role="spark"
                >
                  <div
                    class="progress-track"
                  >
                    <div
                      class="progress-fill"
                      style="height: 60%;"
                    />
                  </div>
                </div>
                <div
                  class="progress-bar"
                  role="spark"
                >
                  <div
                    class="progress-track"
                  >
                    <div
                      class="progress-fill"
                      style="height: 80%;"
                    />
                  </div>
                </div>
                <div
                  class="progress-bar"
                  role="spark"
                >
                  <div
                    class="progress-track"
                  >
                    <div
                      class="progress-fill"
                      style="height: 100%;"
                    />
                  </div>
                </div>
                <div
                  class="progress-bar"
                  role="spark"
                >
                  <div
                    class="progress-track"
                  >
                    <div
                      class="progress-fill"
                      style="height: 80%;"
                    />
                  </div>
                </div>
                <div
                  class="progress-bar"
                  role="spark"
                >
                  <div
                    class="progress-track"
                  >
                    <div
                      class="progress-fill"
                      style="height: 80%;"
                    />
                  </div>
                </div>
                <div
                  class="progress-bar"
                  role="spark"
                >
                  <div
                    class="progress-track"
                  >
                    <div
                      class="progress-fill"
                      style="height: 20%;"
                    />
                  </div>
                </div>
                <div
                  class="progress-bar"
                  role="spark"
                >
                  <div
                    class="progress-track"
                  >
                    <div
                      class="progress-fill"
                      style="height: 20%;"
                    />
                  </div>
                </div>
                <div
                  class="progress-bar"
                  role="spark"
                >
                  <div
                    class="progress-track"
                  >
                    <div
                      class="progress-fill"
                      style="height: 40%;"
                    />
                  </div>
                </div>
                <div
                  class="progress-bar"
                  role="spark"
                >
                  <div
                    class="progress-track"
                  >
                    <div
                      class="progress-fill"
                      style="height: 60%;"
                    />
                  </div>
                </div>
                <div
                  class="progress-bar"
                  role="spark"
                >
                  <div
                    class="progress-track"
                  >
                    <div
                      class="progress-fill"
                      style="height: 40%;"
                    />
                  </div>
                </div>
              </div>
            </div>
          </span>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 20%;"
        >
          <div
            class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws"
            data-testid="pipeline2"
          >
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey400--3csv"
            >
              Last run:
            </p>
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey400--3csv"
            >
              Never
            </p>
          </div>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 10%;"
        >
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-red600--3y6r"
          >
            2
          </p>
        </div>
        <div
          class="cell"
          role="cell"
          style="width: 10%;"
        >
          <div
            class="Layout---horizontal--3rmQ StyledProps---main--1Wws"
            style="justify-content: flex-end;"
          >
            <span
              class="bp3-popover-wrapper bp3-dark"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws actionButton"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-more StyledProps---main--1Wws"
                    icon="more"
                  >
                    <svg
                      data-icon="more"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        more
                      </desc>
                      <path
                        d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="Layout---horizontal--3rmQ StyledProps---main--1Wws Pagination---container--3ype StyledProps---padding-top-medium--29t2 StyledProps---padding-bottom-medium--3R7v StyledProps---flex--2Jz8 StyledProps---flex-align-center-center--2AmX StyledProps---flex-distribution-space-between--1TyN"
      >
        <span
          class="StyledProps---font--2ipy StyledProps---main--1Wws Pagination---text--30fh StyledProps---inline--1f52"
        >
          Showing 
          <strong>
            4
          </strong>
           of 
          <strong>
            4
          </strong>
        </span>
      </div>
    </div>
  </div>
</div>
`;
